--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <title>Document</title>
 </head>
 <body>
 
-<header>Le menu du site Quais Antique</header>
+<header>Le menu du site Quais Antique <i><i class="bi bi-airplane"></i></i></header>
 
     <main id="main-page">
         <!-- le contenue de ma page sera injectée ici -->
@@ -15,5 +18,6 @@
 
     <footer>Le footer de mon site</footer>
     <script type="module" src="Router/router.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
