--- a/pages/home.html
+++ b/pages/home.html
@@ -1,1 +1,2 @@
-<h1>Bienvenue sur le site du restarant Qauis Antique</h1>
+<h1>Bienvenue sur le site du restarant Quais Antique</h1>
+<button class="btn btn-primary">coucou</button>
