--- a/pages/404.html
+++ b/pages/404.html
@@ -1,5 +1,5 @@
 <div>
     <h1>404 page introuvable</h1>
     <p>Oups, il semble que cette page n'existe pas ...</p>
-    <p><a href="/">Retour à l'aceuil</a></p>  
+    <p><a href="/">Retour à l'accueil</a></p>  
 </div>
