--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
  
      <footer class="bg-dark text-white text-center footer">
         <div class="row">
-            <div class="col-12 col-lg-4">
+            <div class="col-12">
                 <h3 class="text-primary">Nos horaires</h3>
                 <p>Du mardi au dimanche  12:00-14:00  18:00-23:00</p>
             </div>
-            <div class="col-6 col-lg-4">
+            <div class="col-6">
                 <p>Quai antique <br/>
                     5 rue de la rue <br/>
                     31150 Fenouillet <br/>
                     04 01 01 01 01 <br/>
                 </p>
             </div>
-            <div class="col-6 col-lg-4">
+            <div class="col-6">
                 <p>contact@quaiantique.com</p>
             </div>
         </div>
